<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_inc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBack"
        android:layout_below="@id/toolbar_inc"
        android:id="@+id/linearLayout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_note"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColor="@color/colorBlack"
        android:lines="1"
        android:textColorHint="@color/colorBlack"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textCapSentences"
        android:maxLength="25" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:hint="@string/text"
        android:textColor="@color/colorBlack"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/colorBlack"
        android:padding="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:gravity="center_vertical|center_horizontal"

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date_time"
                android:id="@+id/dateTime"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:gravity="left"
                android:layout_weight="1.0"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/date_time"
                    android:id="@+id/get_date_time"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="left"
                    android:gravity="right"
                    android:layout_weight="1.0"
                    android:labelFor="@+id/btn_set_date"
                    />

                <Button
                    android:id="@+id/btn_set_date"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:onClick="onChangeDate"
                    android:background="@android:drawable/ic_menu_my_calendar"
                    android:gravity="right"
                    />


            </LinearLayout>


        </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/is_important"
            android:id="@+id/textView2"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:gravity="left"
            android:layout_weight="1"
             />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important"
            android:id="@+id/chb_important"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:attr/textAppearanceMedium"
             />

    </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/submit"
        android:layout_gravity="right"
        android:onClick="onAddNote"
        android:background="@drawable/button_pressed"
        android:src="@android:drawable/ic_menu_save"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp" />
</RelativeLayout>